<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/concept_description" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardMappa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp">

                    <ImageView
                        android:id="@+id/iconaMappa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:src="@drawable/ic_baseline_search_64" />

                    <TextView
                        android:id="@+id/titoloMappa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/iconaMappa"
                        android:text="@string/visit_map"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/descrizioneMappa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/titoloMappa"
                        android:layout_alignStart="@+id/titoloMappa"
                        android:layout_marginStart="0dp"
                        android:text="@string/visit_map_description"
                        android:visibility="visible" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardAggiungiLuogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp">

                    <ImageView
                        android:id="@+id/iconaAggiungiLuogo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:src="@drawable/ic_baseline_add_64" />

                    <TextView
                        android:id="@+id/titoloAggiungiLuogo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/iconaAggiungiLuogo"
                        android:text="@string/add_location"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/descrizioneAggiungiLuogo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/titoloAggiungiLuogo"
                        android:layout_alignStart="@+id/titoloAggiungiLuogo"
                        android:layout_marginStart="0dp"
                        android:text="@string/add_location_description"
                        android:visibility="visible" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardAggiungiSport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp">

                    <ImageView
                        android:id="@+id/iconaAggiungiSport"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:src="@drawable/ic_baseline_sports_football_64" />

                    <TextView
                        android:id="@+id/titoloAggiungiSport"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/iconaAggiungiSport"
                        android:text="@string/add_sport"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/descrizioneAggiungiSport"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/titoloAggiungiSport"
                        android:layout_alignStart="@+id/titoloAggiungiSport"
                        android:layout_marginStart="0dp"
                        android:text="@string/add_sport_description"
                        android:visibility="visible" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardMyLocations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:visibility="visible"
                app:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp">

                    <ImageView
                        android:id="@+id/iconaMyLocations"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:src="@drawable/ic_baseline_location_on_64" />

                    <TextView
                        android:id="@+id/titoloMyLocations"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/iconaMyLocations"
                        android:text="@string/my_locations"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/descrizioneMyLocations"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/titoloMyLocations"
                        android:layout_alignStart="@+id/titoloMyLocations"
                        android:layout_marginStart="0dp"
                        android:text="@string/my_locations_description" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardSportRequests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:visibility="visible"
                app:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp">

                    <ImageView
                        android:id="@+id/iconaSportRequests"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:src="@drawable/ic_baseline_approval_64" />

                    <TextView
                        android:id="@+id/titoloSportRequests"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/iconaSportRequests"
                        android:text="@string/verify_sport"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/descrizioneSportRequests"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/titoloSportRequests"
                        android:layout_alignStart="@+id/titoloSportRequests"
                        android:layout_marginStart="0dp"
                        android:text="@string/verify_sport_description" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardReports"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:visibility="visible"
                app:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp">

                    <ImageView
                        android:id="@+id/iconReports"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:src="@drawable/ic_baseline_report_64" />

                    <TextView
                        android:id="@+id/titoloReports"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/iconReports"
                        android:text="@string/report_reviews"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/descrizioneReports"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/titoloReports"
                        android:layout_alignStart="@+id/titoloReports"
                        android:layout_marginStart="0dp"
                        android:text="@string/report_reviews_description"
                        android:visibility="visible" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardAuth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp">

                    <ImageView
                        android:id="@+id/iconaAuth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:src="@drawable/ic_baseline_login_64" />

                    <TextView
                        android:id="@+id/titoloAuth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/iconaAuth"
                        android:text="@string/login"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/descrizioneAuth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/titoloAuth"
                        android:layout_alignStart="@+id/titoloAuth"
                        android:layout_marginStart="0dp"
                        android:text="@string/login_description"
                        android:visibility="visible" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>